修正5小3元页面图片及布局

--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>铁越集团</title>
+    <title>民主监督-铁越集团</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
@@ -73,12 +73,8 @@
                             <li><a href="images/zhigong4/i9.jpg" data-lightbox="lightbox"><img
                                     src="./images/zhigong/minzlist_25.png"></a></li>
                             <li>
-                                <!--<a href="images/zhigong4/i11.jpg" data-lightbox="lightbox"><img-->
-                                    <!--src="./images/zhigong/minzlist_26.png"></a>-->
-                                 <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                              <a href="images/zhigong4/i12.jpg" data-lightbox="lightbox"><img
+                                      src="./images/zhigong4/i12s.jpg" class="img-fullh"></a></li>
                             </li>
 
                         </ul>
