--- a/tdc_7.html
+++ b/tdc_7.html
@@ -75,12 +75,12 @@
                             <div class="col2-40b-right" style="padding: 0 0 0 8px;"> <!--右边40%-->
                                 <div class="height-1-3" style="padding: 0 0 8px 0">  <!--右第一行-->
                                     <a href="images/tdc7/i1.jpg" data-lightbox="lightbox"><img
-                                    src="./images/tdc7/i1.jpg" class="img-fullw"
+                                    src="./images/tdc7/i1s.jpg" class="img-fullh"
                                     style=""></a>
                                 </div>
                                 <div class="height-1-3" style="padding: 8px 0">  <!--右第二行-->
                                     <a href="images/tdc7/i2.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc7/i2.jpg" class="img-fullw"
+                                            src="./images/tdc7/i2s.jpg" class="img-fullw"
                                             style=""></a>
                                 </div>
                                 <div class="height-1-3" style="padding: 8px 0 0 0;">  <!--右第3行-->
