--- a/tss_6.html
+++ b/tss_6.html
@@ -84,8 +84,8 @@
 
                             <div class="width-1-5" style=""> <!--右边20%-->
                                 <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
-                                    <a href="images/tss6/d-01.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tss6/tss-06.png" class="img-fullw"
+                                    <a href="images/tss6/i10.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/i10s.png" class="img-fullw"
                                             style=" "></a>
                                 </div>
                                 <div class="height-1-4" style="padding:0;">  <!--右第一行-->
@@ -116,7 +116,7 @@
                                 <li><a href="images/tss6/i1.jpg" data-lightbox="lightbox"><img
                                         src="./images/tss6/i1_s.png"> </a></li>
                                 <li><a href="images/tss6/i6.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tss6/i6_s.png"> </a></li>
+                                        src="./images/tss6/i6s.png"> </a></li>
                                 <li class="ximg2"><a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img
                                         src="./images/tss6/i5_s.png"> </a></li>
                                 <a href="images/tss6/i2.jpg" data-lightbox="lightbox"><img src="./images/tss6/i2_s.png">
@@ -135,6 +135,7 @@
                                 <div class="swiper-slide"><img src="images/tss6/i6.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i10.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i1.jpg"></div>
                             </div>
                         </div>
