--- a/1_1_zhigong6.html
+++ b/1_1_zhigong6.html
@@ -45,108 +45,60 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class="width-3-5">
+                            <div class="width-3-5" style="padding: 0 16px 0 0;">
                                 <div class="width-1-2">
-                                    <div class="height-1-2">
+                                    <div class="height-1-2" style="padding: 0 8px 8px 0;">
                                         <a href="images/zhigong6/i1.jpg" data-lightbox="lightbox">
-                                            <img src="./images/zhigong/wuximg_03.png"> </a>
+                                            <img src="./images/zhigong6/i1s.jpg" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-2">
-                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                            <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                    <div class="height-1-2" style="padding: 8px 8px 0 0;">
+                                      <a href="images/zhigong6/i10.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i10s.jpg" class="img-fullh"> </a>
                                     </div>
                                 </div>
                                 <div class="width-1-2">
-                                    <div class="height-1-2">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                    <div class="height-1-2" style="padding: 0 0 8px 8px;">
+                                      <a href="images/zhigong6/i11.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i11s.jpg" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-2">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                    <div class="height-1-2" style="padding: 8px 0 0 8px;">
+                                      <a href="images/zhigong6/i6.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i6s.jpg" class="img-fullh"> </a>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="width-2-5">
-                                <div class="width-1-2">
-                                    <div class="height-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                <div class="width-1-2" style="padding:0 8px 0 0;">
+                                    <div class="height-1-3" style="padding:0 0 8px 0;">
+                                      <a href="images/zhigong6/i2.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i2s.jpg" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style="padding: 8px 0;">
                                         <a href="images/zhigong6/i5.jpg" data-lightbox="lightbox">
-                                            <img src="./images/zhigong/wuximg_10.png"> </a>
+                                            <img src="./images/zhigong/wuximg_10.png" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style="padding: 8px 0 0 0;">
                                         <a href="images/zhigong6/i8.jpg" data-lightbox="lightbox">
-                                            <img src="./images/zhigong/wuximg_18.png"> </a>
+                                            <img src="./images/zhigong/wuximg_18.png" class="img-fullh"> </a>
                                     </div>
                                 </div>
-                                <div class="width-1-2">
-                                    <div class="height-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                <div class="width-1-2" style="padding:0 0 0 8px;">
+                                  <div class="height-1-3" style="padding:0 0 8px 0;">
+                                      <a href="images/zhigong6/i9.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i9s.jpg" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-3">
-                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
-                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
-                                            没有<br>图片
-                                        </div></span>
+                                    <div class="height-1-3" style="padding: 8px 0;">
+                                      <a href="images/zhigong6/i3.jpg" data-lightbox="lightbox">
+                                          <img src="./images/zhigong6/i3s.jpg" class="img-fullh"> </a>
                                     </div>
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style="padding: 8px 0 0 0;">
                                         <a href="images/zhigong6/i4.jpg" data-lightbox="lightbox">
-                                            <img src="./images/zhigong/wuximg_16.png"> </a>
+                                            <img src="./images/zhigong/wuximg_16.png" class="img-fullh"> </a>
                                     </div>
                                 </div>
 
                             </div>
-                            <!--<div class="col-1-2-top">-->
-                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i1.jpg"-->
-                                                                                       <!--data-lightbox="lightbox"><img-->
-                                        <!--src="./images/zhigong/wuximg_03.png"> </a></div>-->
-                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i6.jpg"-->
-                                                                                       <!--data-lightbox="lightbox"><img-->
-                                        <!--src="./images/zhigong/wuximg_05.png"> </a></div>-->
-                                <!--<div class="width-1-5">-->
-                                    <!--<div class="col-1-2-top"><a href="images/zhigong6/i2.jpg"-->
-                                                                <!--data-lightbox="lightbox"><img-->
-                                            <!--src="./images/zhigong/wuximg_07.png"> </a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-1-2-bottom"><a href="images/zhigong6/i5.jpg"-->
-                                                                   <!--data-lightbox="lightbox"><img-->
-                                            <!--src="./images/zhigong/wuximg_10.png"> </a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                            <!--<div class="col-1-2-bottom">-->
-                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i3.jpg"-->
-                                                                                       <!--data-lightbox="lightbox"><img-->
-                                        <!--src="./images/zhigong/wuximg_14.png"> </a></div>-->
-                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i7.jpg"-->
-                                                                                       <!--data-lightbox="lightbox"><img-->
-                                        <!--src="./images/zhigong/wuximg_15.png"> </a></div>-->
-                                <!--<div class="width-1-5">-->
-                                    <!--<div class="col-1-2-top"><a href="images/zhigong6/i4.jpg"-->
-                                                                <!--data-lightbox="lightbox"><img-->
-                                            <!--src="./images/zhigong/wuximg_16.png"> </a>-->
-                                    <!--</div>-->
-                                    <!--<div class="col-1-2-bottom"><a href="images/zhigong6/i8.jpg"-->
-                                                                   <!--data-lightbox="lightbox"><img-->
-                                            <!--src="./images/zhigong/wuximg_18.png"> </a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
 
                         </div>
 
