--- a/tdc_6.html
+++ b/tdc_6.html
@@ -55,24 +55,20 @@
                                 <!--style="height: 468px"></a>-->
                                 <div class="height-2-3" style="padding-bottom: 8px;">
                                     <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
-                                    src="./images/tdc6/dimg_03-2.png" class=""
-                                    style="height:100%;"></a>
+                                    src="./images/tdc6/dimg_03-2.png" class="img-fullh"></a>
                                 </div>
                                 <div class="height-1-3" style="padding-top: 8px;">
-                                    <div class="width-1-3">
+                                    <div class="width-1-3" style="padding: 0 8px 0 0;">
                                         <a href="images/tdc6/d-01.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tdc6/tdc6-01.png" class=""
-                                        style="width:100%;padding: 0 8px 0 0;"></a>
+                                        src="./images/tdc6/tdc6-01.png" class=""></a>
                                     </div>
-                                    <div class="width-1-3">
+                                    <div class="width-1-3" style="padding: 0 8px 0 8px;">
                                         <a href="images/tdc6/d-02.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc6/tdc6-02.png" class=""
-                                                style="width:100%;padding: 0 8px 0 8px;"></a>
+                                                src="./images/tdc6/tdc6-02.png" class="img-fullh"></a>
                                     </div>
-                                    <div class="width-1-3">
+                                    <div class="width-1-3" style="padding: 0 0 0 8px;">
                                         <a href="images/tdc6/d-03.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc6/tdc6-03.png" class=""
-                                                style="padding: 0 0 0 8px;"></a>
+                                                src="./images/tdc6/tdc6-03.png" class="img-fullh"></a>
                                     </div>
                                 </div>
                             </div>
@@ -122,6 +118,7 @@
                                 <div class="swiper-slide"><img src="images/tdc6/d-04.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc6/d-05.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tdc6/d-06.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
                             </div>
                         </div>
 
