--- a/1_1_zhigong5.html
+++ b/1_1_zhigong5.html
@@ -32,7 +32,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>文体活动</h3>
-              
+
             </div>
 
             <div class=" bodypart">
@@ -50,20 +50,17 @@
               <ul class="jiandanglist grid" style="display:none;">
                 <li><a href="images/zhigong5/i1.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_06.png"> </a></li>
                 <li><a href="images/zhigong5/i2.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_08.png"> </a></li>
-                <li><a href="images/zhigong5/i12.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_28.png"> </a></li>
-                <li><a href="images/zhigong5/i6.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_03.png"> </a></li>
-
-                <li><a href="images/zhigong5/i5.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_10.png"> </a></li>
-
-                <li><a href="images/zhigong5/i3.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_16.png"> </a></li>
-                <li><a href="images/zhigong5/i4.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_18.png"> </a></li>
-                <li><a href="images/zhigong5/i7.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_19.png"> </a></li>
+                <li><a href="images/zhigong5/i3.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_28.png"> </a></li>
+                <li><a href="images/zhigong5/i4.jpg" data-lightbox="lightbox" > <img src="./images/zhigong5/i4s.jpg"> </a></li>
+                <li><a href="images/zhigong5/i5.jpg" data-lightbox="lightbox" > <img src="./images/zhigong5/i5s.jpg"> </a></li>
+                <li><a href="images/zhigong5/i6.jpg" data-lightbox="lightbox" > <img src="./images/zhigong5/i6s.jpg"> </a></li>
+                <li><a href="images/zhigong5/i7.jpg" data-lightbox="lightbox" > <img src="./images/zhigong5/i7s.jpg"> </a></li>
                 <li><a href="images/zhigong5/i8.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_20.png"> </a></li>
 
                 <li style="clear:both"><a href="images/zhigong5/i9.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_25.png"> </a></li>
                 <li><a href="images/zhigong5/i10.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_26.png"> </a></li>
                 <li><a href="images/zhigong5/i11.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_27.png"> </a></li>
-                <li><a href="images/zhigong5/i12.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/wentlist_28.png"> </a></li>
+                <li><a href="images/zhigong5/i12.jpg" data-lightbox="lightbox" > <img src="./images/zhigong5/i12s.jpg"> </a></li>
               </ul>
 
               <div class="swiper swiper-container">
