调整音频和图片配合时间

--- a/tdc_1.html
+++ b/tdc_1.html
@@ -11,8 +11,10 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 4500;
+  </script>
 </head>
 <body>
 	<div id="preloader">
@@ -95,7 +97,6 @@
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i12.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i4.jpg">	</div>
@@ -105,6 +106,8 @@
                   <div class="swiper-slide">	<img src="images/tdc1/i8.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i11.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i12.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>
                 </div>
               </div>
