--- a/tss_1.html
+++ b/tss_1.html
@@ -11,11 +11,13 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 6500;
+  </script>
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page tss1 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -32,7 +34,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>铁道1896<br/>花园酒店</h3>
-              
+
             </div>
 
             <div class=" bodypart">
@@ -107,12 +109,12 @@
                   <div class="swiper-slide">	<img src="images/tss1/i1.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss1/i6.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss1/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss1/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss1/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss1/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss1/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss1/i9.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss1/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss1/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss1/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss1/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss1/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss1/i1.jpg">	</div>
                 </div>
               </div>
