调整tss图片与语音的配合

--- a/tss_11.html
+++ b/tss_11.html
@@ -11,8 +11,10 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 2000;
+    </script>
 </head>
 <body>
 <div class="page  tdc-detail">
