--- a/tss_3.html
+++ b/tss_3.html
@@ -11,8 +11,10 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 2750;
+  </script>
 </head>
 <body>
   <div class="page  tdc-detail">
@@ -32,7 +34,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>锦天宾馆</h3>
-              
+
             </div>
             <div class=" bodypart">
               <p class="desc typing-ani">
