--- a/tss_4.html
+++ b/tss_4.html
@@ -13,6 +13,9 @@
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 2000;
+    </script>
 </head>
 <body>
 <div class="page  tdc-detail">
@@ -32,7 +35,7 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>锦江宾馆</h3>
-                        
+
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
