--- a/tss_6.html
+++ b/tss_6.html
@@ -11,8 +11,10 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 4500;
+    </script>
 </head>
 <body>
 <div class="page tss6  tdc-detail">
@@ -130,11 +132,11 @@
                                 <div class="swiper-slide"><img src="images/tss6/i1.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i9.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i5.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss6/i3.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss6/i4.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i6.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i4.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i10.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss6/i1.jpg"></div>
                             </div>
