--- a/tss_13.html
+++ b/tss_13.html
@@ -11,8 +11,11 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 4000;
+    </script>
+
 </head>
 <body>
 <div id="preloader">
@@ -21,7 +24,7 @@
     </div>
 </div>
 
-<div class="page tss133 tdc-detail">
+<div class="page tss13 tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tss_logo.png"></div>
         <div class="row" id="zlogo">
@@ -111,14 +114,15 @@
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="images/tss13/i13.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss13/i13.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss13/d-01.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss13/d-02.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss13/d-03.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i3.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i5.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i8.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/i10.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss13/d-01.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss13/d-02.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss13/d-03.jpg"></div>
                             </div>
                         </div>
                     </div>
