调整职工之家图像音频

--- a/1_1_jiandang5.html
+++ b/1_1_jiandang5.html
@@ -11,8 +11,11 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 6000;
+  </script>
+
 </head>
 <body>
   <div class="page jiandang5 tdc-detail">
@@ -32,7 +35,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>作风建设</h3>
-              
+
             </div>
 
             <div class=" bodypart">
@@ -64,6 +67,7 @@
                   <div class="swiper-slide">	<img src="images/jiandang5/i4.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang5/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang5/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang5/i1.jpg">	</div>
                 </div>
               </div>
             </div>
