--- a/1_1_zhigong6.html
+++ b/1_1_zhigong6.html
@@ -112,6 +112,9 @@
                                 <div class="swiper-slide"><img src="images/zhigong6/i6.jpg"></div>
                                 <div class="swiper-slide"><img src="images/zhigong6/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/zhigong6/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i1.jpg"></div>
                             </div>
                         </div>
                     </div>
