--- a/try_2.html
+++ b/try_2.html
@@ -11,8 +11,10 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 5000;
+    </script>
 </head>
 <body>
 <div class="page try2 tdc-detail">
@@ -111,28 +113,6 @@
                                             src="./images/try2/i10.jpg"  class="img-fullh"></a>
                                 </div>
                             </div>
-                            <!--<div class="row-1-2-left">  &lt;!&ndash;四幅图片左半部分&ndash;&gt;-->
-                            <!--<div class="col-1-2-top">-->
-                            <!--<a href="images/try2/xtlimg_03.png" data-lightbox="lightbox"> <img-->
-                            <!--src="./images/try2/xtlimg_03.png" class=""></a>-->
-                            <!--</div>-->
-                            <!--<div class="col-1-2-bottom">-->
-                            <!--<a href="images/try2/xtlimg_05.png" data-lightbox="lightbox"> <img-->
-                            <!--src="./images/try2/xtlimg_05.png" class=""></a>-->
-                            <!--</div>-->
-
-                            <!--</div>-->
-                            <!--<div class="row-1-2-right">     &lt;!&ndash;四幅图片右半部分&ndash;&gt;-->
-                            <!--<div class="col-1-2-top">-->
-                            <!--<a href="images/try2/xtlimg_10.png" data-lightbox="lightbox"> <img-->
-                            <!--src="./images/try2/xtlimg_10.png" class=""></a>-->
-                            <!--</div>-->
-                            <!--<div class="col-1-2-bottom">-->
-                            <!--<a href="images/try2/xtlimg_12.png" data-lightbox="lightbox"> <img-->
-                            <!--src="./images/try2/xtlimg_12.png" class=""></a>-->
-                            <!--</div>-->
-                            <!--</div>-->
-
                         </div>
 
                         <div class="swiper swiper-container">
@@ -141,6 +121,13 @@
                                 <div class="swiper-slide"><img src="images/try2/i2.jpg"></div>
                                 <div class="swiper-slide"><img src="images/try2/i3.jpg"></div>
                                 <div class="swiper-slide"><img src="images/try2/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i11.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i12.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i1.jpg"></div>
                             </div>
                         </div>
 
