--- a/1_1_jiandang4.html
+++ b/1_1_jiandang4.html
@@ -11,8 +11,10 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 5000;
+  </script>
 </head>
 <body>
   <div class="page jiandang4 tdc-detail">
@@ -32,7 +34,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>组织建设</h3>
-              
+
             </div>
 
             <div class=" bodypart">
