--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -11,11 +11,13 @@
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+  <script>
+    g_autoplay = 4000;
+  </script>
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page jiandang8 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -51,15 +53,6 @@
                 <div class="col-1-2-top"> <!--一半高度-->
                   <!--40%的宽度-->
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i6.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_08.png"> </a></div>
-                  <!--40%的宽度-->
-                  <!--<div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i1.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_03.png"> </a></div>-->
-
-                  <!--<div class="width-1-5">-->
-                    <!--<div class="col-1-2-top"><a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a>-->
-                    <!--</div>-->
-                    <!--<div class="col-1-2-bottom"><a href="images/jiangdang8/i8.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_11.png"> </a>-->
-                    <!--</div>-->
-                  <!--</div>-->
                   <div class="width-3-5">
                     <div class="col-1-2-top">
                       <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
@@ -94,6 +87,9 @@
                   <div class="swiper-slide">	<img src="images/jiangdang8/i6.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiangdang8/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiangdang8/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiangdang8/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiangdang8/i12.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiangdang8/i1.jpg">	</div>
                 </div>
               </div>
 
