--- a/try_1.html
+++ b/try_1.html
@@ -11,8 +11,10 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+      g_autoplay = 5000;
+    </script>
 </head>
 <body>
 <div class="page try1 tdc-detail">
@@ -90,10 +92,16 @@
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="images/try1/i1.jpg"></div>
-                                <div class="swiper-slide"><img src="images/try1/i2.jpg"></div>
-                                <div class="swiper-slide"><img src="images/try1/i3.jpg"></div>
-
+                              <div class="swiper-slide"><img src="images/try1/i1.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i2.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i3.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i4.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i5.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i10.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i11.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i12.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i13.jpg"></div>
+                              <div class="swiper-slide"><img src="images/try1/i1.jpg"></div>
                             </div>
                         </div>
 
