调整典型示范页面图片布局

--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -71,9 +71,9 @@
                 <div class="col-1-2-bottom">
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i5.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_16.png"> </a></div>
-                  <div class="width-1-5">
-                    <div class="col-1-2-top"><a href="images/jiangdang8/i10.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i10.jpg" class="img-fullh"> </a></div>
-                    <div class="col-1-2-top"><a href="images/jiangdang8/i11.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i11.jpg" class="img-fullh"> </a></div>
+                  <div class="width-1-5" style="padding: 0 16px 0 0">
+                    <div class="col-1-2-top" style="padding: 0 0 8px 0"><a href="images/jiangdang8/i10.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i10.jpg" class="img-fullh"> </a></div>
+                    <div class="col-1-2-top" style="padding: 8px 0 0 0"><a href="images/jiangdang8/i11.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i11.jpg" class="img-fullh"> </a></div>
                   </div>
                 </div>
               </div>
