添加房地产替换图片

--- a/culture_1.html
+++ b/culture_1.html
@@ -32,7 +32,6 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>集团旗帜</h3>
-              
             </div>
 
             <div id="image_list" class=" bodypart">
@@ -47,7 +46,7 @@
           </div>
           <div class="col-md-9 rightpart" >
             <div class="bodypart">
-              <img src="./images/culture/qizhiimg_03.png">
+              <img src="./images/culture/qizhiimg_03.png" style="height:100%;width:auto;">
             </div>
           </div>
         </div>
