--- a/try_2.html
+++ b/try_2.html
@@ -80,8 +80,8 @@
                                                 src="./images/try2/i6.jpg" class="img-fullh" ></a>
                                     </div>
                                     <div class="width-1-4" style="padding: 8px 16px 0 0;">
-                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                                src="./images/try2/timg.jpg" class="img-fullh"></a>
+                                        <a href="images/try2/i5.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/i5.jpg" class="img-fullh"></a>
                                     </div>
                                     <div class="width-1-4" style="padding: 8px 16px 0 0;">
                                         <a href="images/try2/i8.jpg" data-lightbox="lightbox"> <img
@@ -97,8 +97,8 @@
 
                             <div class="width-1-5">
                                 <div class="height-1-4" style="padding: 0 0 8px 0;">
-                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
-                                            src="./images/try2/timg.jpg" class="img-fullh"></a>
+                                    <a href="images/try2/i7.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/i7.jpg" class="img-fullh"></a>
                                 </div>
                                 <div class="height-1-4" style="padding: 8px 0;">
                                     <a href="images/try2/i12.jpg" data-lightbox="lightbox"> <img
