--- a/tss_10.html
+++ b/tss_10.html
@@ -13,7 +13,7 @@
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
-    
+
 </head>
 <body>
 <div class="page  tdc-detail">
@@ -92,7 +92,7 @@
                                     </div>
 
                                     <div class="col-1-2-bottom">  <!--右第一行-->
-                                        <a href="images/tss10/" data-lightbox="lightbox"><img
+                                        <a href="images/tss10/i15.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss10/tss-05.png" class=""
                                                 style=""></a>
                                     </div>
@@ -103,13 +103,14 @@
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide"><img src="images/tss10/i2.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/i1.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/i3.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/d-03.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/d-04.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/d-01.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/d-02.jpg"></div>
-                                <div class="swiper-slide"><img src="images/tss10/i1.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/i15.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/i1.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/i3.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/d-03.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/d-04.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/d-01.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/i12.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss10/i1.jpg"></div>
                             </div>
                         </div>
                     </div>
