--- a/tdc_6.html
+++ b/tdc_6.html
@@ -67,7 +67,7 @@
                                                 src="./images/tdc6/tdc6-02.png" class="img-fullh"></a>
                                     </div>
                                     <div class="width-1-3" style="padding: 0 0 0 8px;">
-                                        <a href="images/tdc6/d-03.jpg" data-lightbox="lightbox"><img
+                                        <a href="images/tdc6/i6.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tdc6/tdc6-03.png" class="img-fullh"></a>
                                     </div>
                                 </div>
