调整熊岳疗养图片布局

--- a/culture_5.html
+++ b/culture_5.html
@@ -27,25 +27,20 @@
 			</div>
 		</div>
 
-    <div class="container">
-        <div class="row" id="fenlei">
-          <div class="col-md-3">
-            <a href="#" class="profile_btn2">  </a>
-          </div>
-
-            <div class="col-md-3">
-              <a href="#" class="business_btn2">  </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#" class="culture_btn2">  </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#" class="party_btn2"> </a>
-            </div>
-        </div>
-    </div>
-
-
+		<div class="main">
+			<div class="main-content">
+				<div class="video-thumb">
+					<div class="image" > 
+					<video class="video-js " data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+					  <source src="videos/大连城市物流共同配送中心.webm" type="video/webm"/>
+					</video>
+					</div>
+					<div class="title"> this is title		</div>
+				</div>
+				 
+			 
+			</div>
+		</div>
 
     </div>
 
