--- a/tss_8.html
+++ b/tss_8.html
@@ -32,7 +32,7 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>熊岳城疗养院</h3>
-                        
+
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
@@ -72,43 +72,43 @@
                             </div>
 
                             <div class="width-2-5" style=""> <!--右边40%-->
-                                <div class="height-1-4">  <!--右第一行-->
+                                <div class="height-1-4" style="padding: 0 0 16px 0;">  <!--右第一行-->
                                     <div class="row-1-2-left">
                                         <a href="images/tss8/i9.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i9.jpg" class=""
+                                                src="./images/tss8/i9.jpg" class="img-fullh"
                                                 style="  "></a>
                                     </div>
                                     <div class="row-1-2-right">
                                         <a href="images/tss8/i4.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i4.jpg" class=""
+                                                src="./images/tss8/i4.jpg" class="img-fullh"
                                                 style=" "></a>
                                     </div>
                                 </div>
-                                <div class="height-1-4">  <!--右第一行-->
+                                <div class="height-1-4" style="padding: 0 0 8px 0;">  <!--右第一行-->
                                     <div class="row-1-2-left">
                                         <a href="images/tss8/i5.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i5.jpg" class=""
+                                                src="./images/tss8/i5.jpg" class="img-fullh"
                                                 style=" "></a>
                                     </div>
                                     <div class="row-1-2-right">
                                         <a href="images/tss8/i8.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i8.jpg" class=""
+                                                src="./images/tss8/i8.jpg" class="img-fullh"
                                                 style=" "></a>
                                     </div>
                                 </div>
-                                <div class="height-1-4">  <!--右第一行-->
+                                <div class="height-1-4" style="padding: 8px 0;">  <!--右第一行-->
                                     <div class="row-1-2-left">
                                         <a href="images/tss8/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i3.jpg" class=""
+                                                src="./images/tss8/i3.jpg" class="img-fullh"
                                                 style=""></a>
                                     </div>
                                     <div class="row-1-2-right">
                                         <a href="images/tss8/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i2.jpg" class=""
+                                                src="./images/tss8/i2.jpg" class="img-fullh"
                                                 style=" "></a>
                                     </div>
                                 </div>
-                                <div  class="height-1-4">  <!--右第一行-->
+                                <div  class="height-1-4" style="padding: 8px 0 0 0;">  <!--右第一行-->
                                     <a href="images/tss8/i1.jpg" data-lightbox="lightbox"><img
                                             src="./images/tss8/i1_s.jpg" class="img-fullw"
                                             style=""></a>
