--- a/1_1_jiandang6.html
+++ b/1_1_jiandang6.html
@@ -66,6 +66,7 @@
                   <div class="swiper-slide">	<img src="images/jiandang6/i4.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang6/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang6/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang6/i1.jpg">	</div>
                 </div>
               </div>
 
