--- a/culture_3.html
+++ b/culture_3.html
@@ -77,13 +77,13 @@
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
         <div class="content">
-            <div class="col-md-3 leftpart">
-                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal"
-                   data-target="#myModal">
-                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-                    <span>		视频 </span>
-                </a>
-            </div>
+            <!--<div class="col-md-3 leftpart">-->
+                <!--<a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal"-->
+                   <!--data-target="#myModal">-->
+                    <!--<span class="glyphicon glyphicon-film" aria-hidden="true"></span>-->
+                    <!--<span>		视频 </span>-->
+                <!--</a>-->
+            <!--</div>-->
 
             <div class="col-md-9 rightpart">
                 <div class="pull-right">
