旗帜引领音频播放问题

--- a/1_1_jiandang5.html
+++ b/1_1_jiandang5.html
@@ -90,7 +90,7 @@
 
       <div class="col-md-9 rightpart" >
         <div class="pull-right">
-          <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+          <a class="back-btn ctl_btn" href="1_1_jiandang1.html?noaudio=1"> 返回 </a>
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
