--- a/culture_4.html
+++ b/culture_4.html
@@ -52,8 +52,8 @@
             <div class="pull-right">
               <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-              <a class="play-inner-audio-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0);"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
-                <audio  autoplay="true" class="audio-js">
+              <a class="play-inner-audio-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0);"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span>
+                <audio  class="audio-js">
                   <source src="audios/追逐梦想.ogg" type="audio/ogg" />
                 </audio>
               </a>
