--- a/1_1_jiandang1.html
+++ b/1_1_jiandang1.html
@@ -21,16 +21,18 @@
         <div class="col-md-4"></div>
       </div>
     </div>
-    <div class="main" style="height:80%">
-      <div class="main-content  " style="height:70%">
-        <div class="jdtou">
-        <div class="titlepart2">
+    <div class="main" style="">
+      <div class="main-content  " style="">
+
+        <div class="jdtou" style="height: 150px;">
+          <div class="titlepart2">
                     <h3>旗帜引领</h3>
-            </div>
+          </div>
             <p class="half-p">集团公司党委认真贯彻党的十九大精神，全面落实从严治党要求， 紧密围绕“两学一做”学习教育和局党委、路局的工作部署，加强党的思想、组织、作风、廉政和文化建设，突出抓好党建责任制的落实、抓好领导班子作风能力的强化、抓好领导队伍整体素质的提升，为确保实现集团公司转型发展目标提供坚强有力的政治保证。
             </p>
-            </div>
-        <div class="half-height" style="    width: 1200px;margin: auto;">
+        </div>
+        <div style="position:absolute; top:150px; bottom:0; left:0; right:0;">
+          <div class="half-height" style="    width: 1200px;margin: auto;">
 
           <div class="width-1-4">
             <a class="image-wrapper" href="1_1_jiandang2.html">
@@ -47,7 +49,7 @@
             <a href="1_1_jiandang5.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_09.png" class="img-fullw"></div><p>作风建设 </p></a>
           </div>
         </div>
-        <div class="half-height" style="width: 900px; margin: auto;">
+          <div class="half-height" style="width: 900px; margin: auto;">
 
 
           <div class="width-1-3">
@@ -60,7 +62,7 @@
             <a href="1_1_jiandang8.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_23.png" class="img-fullw"></div><p>典型示范 </p></a>
           </div>
         </div>
-
+        </div>
       </div>
 
     </div>
@@ -72,10 +74,10 @@
 
         <div class="col-md-9 rightpart" >
           <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-btn ctl_btn" href="1_jiandang.html"> 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-inner-audio-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0);"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
-              <audio id="audio-js" autoplay="true"  class="audio-js">
+            <a class="play-inner-audio-btn play-audio-btn audio-off ctl_btn" href="javascript:void(0);"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span>
+              <audio id="audio-js"  class="audio-js">
                 <source src="audios/zhigong/旗帜引领.ogg" type="audio/ogg" />
               </audio>
             </a>
