--- a/tdc_5.html
+++ b/tdc_5.html
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="page  tdc-detail">
+<div class="page tdc5 tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tdc_logo.png"></div>
         <div class="row" id="zlogo">
