调整作风建设图片布局

--- a/1_1_jiandang5.html
+++ b/1_1_jiandang5.html
@@ -50,14 +50,16 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist1 grid" style="display:none;">
-                <li><a href="images/jiandang5/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_03.png"> </a></li>
-                <li><a href="images/jiandang5/i2.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_05.png"> </a></li>
-                <li><a href="images/jiandang5/i5.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_07.png"> </a></li>
+              <ul class="jiandanglist5 grid" style="display:none;">
+                <li><a href="images/jiandang5/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i1s.jpg"> </a></li>
+                <li><a href="images/jiandang5/i2.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i2s.jpg"> </a></li>
+                <li><a href="images/jiandang5/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i3s.jpg"> </a></li>
+                <li><a href="images/jiandang5/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i4s.jpg"> </a></li>
+                <li class="line2"><a href="images/jiandang5/i5.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i5s.jpg"> </a></li>
+                <li class="line2"><a href="images/jiandang5/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i6s.jpg"> </a></li>
+                <li class="line2"><a href="images/jiandang5/i7.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i7s.jpg"> </a></li>
+                <li class="line2"><a href="images/jiandang5/i8.jpg" data-lightbox="lightbox" > <img src="./images/jiandang5/i8s.jpg"> </a></li>
 
-                <li style="clear:both"><a href="images/jiandang5/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_12.png"> </a></li>
-                <li><a href="images/jiandang5/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_13.png"> </a></li>
-                <li><a href="images/jiandang5/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/danglist1_14.png"> </a></li>
               </ul>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
@@ -67,6 +69,8 @@
                   <div class="swiper-slide">	<img src="images/jiandang5/i4.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang5/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang5/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang5/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang5/i8.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang5/i1.jpg">	</div>
                 </div>
               </div>
