调整组织建设图片布局

--- a/1_1_jiandang4.html
+++ b/1_1_jiandang4.html
@@ -13,7 +13,7 @@
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
   <script>
-    g_autoplay = 5000;
+    g_autoplay = 3500;
   </script>
 </head>
 <body>
@@ -50,19 +50,21 @@
             </div>
             <div id="image_list" class=" bodypart">
               <ul class="jiandanglist grid" style="display:none;">
-                <li><a href="images/jiandang4/i1.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_03.png"> </a> </li>
-                <li><a href="images/jiandang4/i2.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_05.png"> </a> </li>
-                <li><a href="images/jiandang4/i5.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_07.png"> </a> </li>
-                <li><a href="images/jiandang4/i6.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_09.png"> </a> </li>
+                <li><a href="images/jiandang4/i1.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i1s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i2.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i2s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i5.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i3s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i6.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i4s.jpg"> </a> </li>
 
-                <li><a href="images/jiandang4/i3.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jiandang-01.png"> </a> </li>
+                <li><a href="images/jiandang4/i3.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i5s.jpg"> </a> </li>
 
-                <li><a href="images/jiandang4/i4.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_17.png"> </a> </li>
-                <li><a href="images/jiandang4/i7.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_16.png"> </a> </li>
-                <li><a href="images/jiandang4/i8.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_18.png"> </a> </li>
+                <li><a href="images/jiandang4/i4.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i6s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i7.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i7s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i8.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i8s.jpg"> </a> </li>
 
-                <li><a href="images/jiandang4/i9.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_23.png"> </a> </li>
-                <li><a href="images/jiandang4/i10.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_24.png"> </a> </li>
+                <li><a href="images/jiandang4/i9.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i9s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i10.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i10s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i11.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i11s.jpg"> </a> </li>
+                <li><a href="images/jiandang4/i12.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang4/i12s.jpg"> </a> </li>
 
               </ul>
               <div class="swiper swiper-container">
@@ -75,6 +77,11 @@
                   <div class="swiper-slide">	<img src="images/jiandang4/i6.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang4/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang4/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i10.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i11.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i12.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i1.jpg">	</div>
                 </div>
               </div>
             </div>
